@@ -5,11 +5,6 @@ import java.util.concurrent.Executors
 
 import org.junit.Test
 
-/**
- * Configure in gradle: --enable-preview --add-modules jdk.incubator.concurrent
- * Virtual Threads: openjdk.org/jeps/425
- * Article: www.marcobehler.com/guides/java-project-loom
- */
 class VirtualThreadTest {
     @Test
     @Throws(ExecutionException::class, InterruptedException::class)
